Buildout infrastructure update

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,8 +14,6 @@ default-eggs =
     Plone
     plone.app.upgrade
     PILwoTk
-    tn.plonehtmlpage
-    tn.plonestyledpage
     ${buildout:package-name} ${buildout:package-extras}
 
 auto-checkout = *
@@ -27,6 +25,10 @@ exec-sitecustomize = false
 
 [sources]
 stubydoo = git central:stubydoo
+tn.bulletino = git central:tn.bulletino
+tn.ploneformwidget.sourcecode = git central:tn.ploneformwidget.sourcecode
+tn.plonemailing = git central:tn.plonemailing
+tn.plonehtmlimagecache = git central:tn.plonehtmlimagecache
 tn.plonehtmlpage = git central:tn.plonehtmlpage
 tn.plonestyledpage = git central:tn.plonestyledpage
 
@@ -36,6 +38,7 @@ user = admin:admin
 eggs =
     ${buildout:default-eggs}
     plone.app.toolbar
+    tn.bulletino
     Products.DocFinderTab
 environment-vars = zope_i18n_compile_mo_files true
 
@@ -44,6 +47,8 @@ recipe = zc.recipe.testrunner
 defaults = ['-v', '-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
 eggs =
     ${buildout:default-eggs}
+    tn.plonehtmlpage
+    tn.plonestyledpage
     zope.app.testing
 
 [omelette]
