--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,22 +3,19 @@ parts = instance test omelette i18ndude zopepy
 package-name = tn.plonebehavior.template
 package-extras = [test]
 develop = .
-extends = http://dist.plone.org/release/4.2-latest/versions.cfg
+extends = http://dist.plone.org/release/4-latest/versions.cfg
 find-links =
     http://dist.plone.org/thirdparty/
-    http://dist.plone.org/release/4.2-latest/
+    http://dist.plone.org/release/4-latest/
 versions = versions
 extensions = mr.developer buildout.dumppickedversions
 
 default-eggs =
     Plone
-    plone.app.upgrade
-    PILwoTk
     ${buildout:package-name} ${buildout:package-extras}
 
-auto-checkout = *
-always-checkout = true
 sources-dir = deps
+auto-checkout = *
 
 include-site-packages = false
 exec-sitecustomize = false
@@ -37,7 +34,6 @@ recipe = plone.recipe.zope2instance
 user = admin:admin
 eggs =
     ${buildout:default-eggs}
-    plone.app.toolbar
     tn.bulletino
     Products.DocFinderTab
 environment-vars = zope_i18n_compile_mo_files true
@@ -67,6 +63,4 @@ recipe = zc.recipe.egg
 eggs = i18ndude
 
 [versions]
-zc.buildout = 1.5.2
-zc.recipe.egg = 1.3.0
-zc.recipe.testrunner = 1.4.0
+zc.buildout = 1.7.1
