Update buildout sources

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,13 +21,13 @@ include-site-packages = false
 exec-sitecustomize = false
 
 [sources]
-stubydoo = git central:stubydoo
-tn.bulletino = git central:tn.bulletino
-tn.ploneformwidget.sourcecode = git central:tn.ploneformwidget.sourcecode
-tn.plonemailing = git central:tn.plonemailing
-tn.plonehtmlimagecache = git central:tn.plonehtmlimagecache
-tn.plonehtmlpage = git central:tn.plonehtmlpage
-tn.plonestyledpage = git central:tn.plonestyledpage
+stubydoo = git git@bitbucket.org:aptn/stubydoo
+tn.bulletino = git git@bitbucket.org:aptn/tn.bulletino
+tn.ploneformwidget.sourcecode = git git@bitbucket.org:aptn/tn.ploneformwidget.sourcecode
+tn.plonemailing = git git@bitbucket.org:aptn/tn.plonemailing
+tn.plonehtmlimagecache = git git@bitbucket.org:aptn/tn.plonehtmlimagecache
+tn.plonehtmlpage = git git@bitbucket.org:aptn/tn.plonehtmlpage
+tn.plonestyledpage = git git@bitbucket.org:aptn/tn.plonestyledpage
 
 [instance]
 recipe = plone.recipe.zope2instance
