--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,20 +21,18 @@ include-site-packages = false
 exec-sitecustomize = false
 
 [sources]
-stubydoo = git git@bitbucket.org:aptn/stubydoo
-tn.bulletino = git git@bitbucket.org:aptn/tn.bulletino
-tn.ploneformwidget.sourcecode = git git@bitbucket.org:aptn/tn.ploneformwidget.sourcecode
-tn.plonemailing = git git@bitbucket.org:aptn/tn.plonemailing
-tn.plonehtmlimagecache = git git@bitbucket.org:aptn/tn.plonehtmlimagecache
-tn.plonehtmlpage = git git@bitbucket.org:aptn/tn.plonehtmlpage
-tn.plonestyledpage = git git@bitbucket.org:aptn/tn.plonestyledpage
+stubydoo = git git@github.com:tecnologiaenegocios/stubydoo.git
+tn.plonestyledpage = git git@github.com:tecnologiaenegocios/tn.plonestyledpage.git
+tn.plonehtmlpage = git git@github.com:tecnologiaenegocios/tn.plonehtmlpage.git
+tn.ploneformwidget.sourcecode = git git@github.com:tecnologiaenegocios/tn.ploneformwidget.sourcecode.git
 
 [instance]
 recipe = plone.recipe.zope2instance
 user = admin:admin
 eggs =
     ${buildout:default-eggs}
-    tn.bulletino
+    tn.plonestyledpage
+    tn.plonehtmlpage
     Products.DocFinderTab
 environment-vars = zope_i18n_compile_mo_files true
 
@@ -43,8 +41,8 @@ recipe = zc.recipe.testrunner
 defaults = ['-v', '-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
 eggs =
     ${buildout:default-eggs}
-    tn.plonehtmlpage
     tn.plonestyledpage
+    tn.plonehtmlpage
     zope.app.testing
 
 [omelette]
